--- a/TRMSProject/.settings/org.eclipse.wst.common.component
+++ b/TRMSProject/.settings/org.eclipse.wst.common.component
@@ -5,7 +5,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
-        <property name="java-output-path" value="/TRSMProject/target/classes"/>
-        <property name="context-root" value="TRMSProject"/>
+        <property name="java-output-path" value="/TRMSProject/target/classes"/>
+        <property name="context-root" value="TRSMProject"/>
     </wb-module>
 </project-modules>
